--- a/assets/css/wpr-affiliate-reference-product.css
+++ b/assets/css/wpr-affiliate-reference-product.css
@@ -3,4 +3,13 @@
     font-size: 14px;
     color: #555;
     margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.update-indicator {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-left: 10px;
 }
